Fix alignment on visions list

--- a/css/streetvisions.css
+++ b/css/streetvisions.css
@@ -28,7 +28,8 @@ section.scheme-show section.content .segmented-control-container {display: inlin
 
 section.scheme-show section.content .add-vision {margin-top: 12px; float: right;}
 section.scheme-show section.content hr {width: calc(100% + 25px); margin-top: 15px;}
-section.scheme-show section.content h3 {margin: 10px 10px 30px; color: black; font-size: 16px;}
+section.scheme-show section.content h3 {margin: 10px 10px 30px 0; color: black; font-size: 16px;}
+section.scheme-show section.content ul {padding-left: 0;}
 section.scheme-show section.content ul li {list-style-type: none;}
 
 section.scheme-show section.content .library_card {display: inline-block; width: 350px; margin: 0 30px 30px 0; line-height: 1.42857143; background-color: #fff; border-radius: 10px; box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); transition: box-shadow .25s; color: black;}
